# vrf-optimisation-tests

./: .gitignore  Cargo.toml  LIBSODIUM.md  Makefile  README.md  VRF_BATCH.md  batch_verify.c  main.c  praos_vrf.c  twohashdh.c
src/: main.rs  twohashdh.rs
