[package]
name = "vrf_batching"
version = "0.1.0"
authors = ["iquerejeta <querejeta.azurmendi@iohk.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { package = "curve25519-dalek-ng", version = "4" }
csv = "1"
rand = "0.8"
rand_core = "0.6.3"
rand_chacha = "0.3.1"
blake2 = "0.9.1"